--- a/Workbit.App/appsettings.json
+++ b/Workbit.App/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-QEKSTPQ\\SQLEXPRESS01;Database=WorkbitDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "WorkbitDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Workbit.App;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-QEKSTPQ\\SQLEXPRESS01;Database=WorkbitDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
+    "WorkbitDbContextConnection": "Server=DESKTOP-QEKSTPQ\\SQLEXPRESS01;Database=WorkbitDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
