--- a/Workbit.App/Workbit.App.csproj
+++ b/Workbit.App/Workbit.App.csproj
@@ -21,6 +21,7 @@
 
 
 	<ItemGroup>
+    <ProjectReference Include="..\Workbit.Core.Models\Workbit.Core.Models.csproj" />
     <ProjectReference Include="..\Workbit.Core\Workbit.Core.csproj" />
     <ProjectReference Include="..\Workbit.Infrastructure\Workbit.Infrastructure.csproj" />
   </ItemGroup>
