--- a/Workbit.Core/Workbit.Core.csproj
+++ b/Workbit.Core/Workbit.Core.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Workbit.Core.Models\Workbit.Core.Models.csproj" />
+    <ProjectReference Include="..\Workbit.Infrastructure\Workbit.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
