--- a/Workbit.App/Workbit.App.csproj
+++ b/Workbit.App/Workbit.App.csproj
@@ -28,8 +28,10 @@
 
 
 	<ItemGroup>
-	  <Folder Include="Areas\Admin\Data\" />
-	  <Folder Include="Areas\Admin\Models\" />
+	  <Folder Include="Areas\Employee\Controllers\" />
+	  <Folder Include="Areas\Employee\Data\" />
+	  <Folder Include="Areas\Employee\Models\" />
+	  <Folder Include="Areas\Employee\Views\" />
 	</ItemGroup>
 
 </Project>
