added coutry table and added IBAN properties

--- a/Workbit.App/appsettings.json
+++ b/Workbit.App/appsettings.json
@@ -3,6 +3,9 @@
     "DefaultConnection": "Server=DESKTOP-QEKSTPQ\\SQLEXPRESS01;Database=WorkbitDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
     "WorkbitDbContextConnection": "Server=DESKTOP-QEKSTPQ\\SQLEXPRESS01;Database=WorkbitDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "ApiNinjas": {
+    "ApiKey": "aNPf+pdl3stxuvUoS5C+rQ==hOmRjLLpaTV6diDE"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
