created Employee area

--- a/Workbit.App/Workbit.App.csproj
+++ b/Workbit.App/Workbit.App.csproj
@@ -28,4 +28,10 @@
     <ProjectReference Include="..\Workbit.Infrastructure\Workbit.Infrastructure.csproj" />
   </ItemGroup>
 
+
+	<ItemGroup>
+	  <Folder Include="Areas\Manager\Data\" />
+	  <Folder Include="Areas\Manager\Models\" />
+	</ItemGroup>
+
 </Project>
