--- a/Workbit.App/Workbit.App.csproj
+++ b/Workbit.App/Workbit.App.csproj
@@ -28,4 +28,11 @@
     <ProjectReference Include="..\Workbit.Infrastructure\Workbit.Infrastructure.csproj" />
   </ItemGroup>
 
+
+	<ItemGroup>
+	  <Folder Include="Areas\Ceo\Views\Manager\" />
+	  <Folder Include="Views\Ceo\" />
+	  <Folder Include="Views\Department\" />
+	</ItemGroup>
+
 </Project>
