--- a/Workbit.Infrastructure/Workbit.Infrastructure.csproj
+++ b/Workbit.Infrastructure/Workbit.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="IbanNet" Version="5.18.0" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="8.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
